Fix bug with hero image overlapping last membership option
Unfortunately, the pointer-events property does not work in IE10 and
older... Will have to find a workaround!

--- a/src/css/modules-fees.css
+++ b/src/css/modules-fees.css
@@ -6,6 +6,7 @@
 
 .fees-hero {
 	position: absolute;
+	pointer-events: none;
 }
 
 .fees-hero {
